--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         </div>
 
         <ul class="nav-links">
-            <li><a href="../html/index.html">Accueil</a></li>
+            <li><a href="./html/index.html">Accueil</a></li>
             <li><a href="#">Destinations</a></li>
             <li><a href="#">Offres</a></li>
-            <li><a href="../html/contact.html">Contact</a></li>
+            <li><a href="./html/contact.html">Contact</a></li>
         </ul>
 
         <div class="nav-buttons">
