--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </ul>
 
         <div class="nav-buttons">
-            <a href="./login.html" class="btn login">Connexion</a>
-            <a href="./signup.html" class="btn signup">Inscription</a>
+            <a href="./html/login.html" class="btn login">Connexion</a>
+            <a href="./html/signup.html" class="btn signup">Inscription</a>
         </div>
 
         <div class="menu-icon">
@@ -112,7 +112,7 @@
         </div>
 
         <div class="view-all-container">
-            <a href="./list-articles.html" class="view-all-btn">Voir Tous les Articles <i
+            <a href="./html/list-articles.html" class="view-all-btn">Voir Tous les Articles <i
                     class="bi bi-arrow-right-circle"></i></a>
         </div>
     </section>
@@ -297,7 +297,7 @@
         </div>
 
         <div class="view-more-container">
-            <a href="./avis.html" class="view-more-btn">Voir tous les témoignages <i class="bi bi-arrow-right"></i></a>
+            <a href="./html/avis.html" class="view-more-btn">Voir tous les témoignages <i class="bi bi-arrow-right"></i></a>
         </div>
     </section>
 
@@ -310,7 +310,7 @@
                     <h3>Notre Blog Voyage</h3>
                     <p>Découvrez nos conseils, récits d'aventures et guides complets pour préparer votre prochain
                         voyage.</p>
-                    <a href="./blogs.html" class="cta-btn">Explorer le Blog <i class="bi bi-book"></i></a>
+                    <a href="./html/blogs.html" class="cta-btn">Explorer le Blog <i class="bi bi-book"></i></a>
                 </div>
                 <div class="cta-image">
                     <img src="../assets/blog.jpg" alt="Blog Voyage">
@@ -322,7 +322,7 @@
                     <h3>Prêt à Partir ?</h3>
                     <p>Notre équipe est disponible pour créer le voyage de vos rêves. Contactez-nous dès maintenant !
                     </p>
-                    <a href="./contact.html" class="cta-btn">Nous Contacter <i class="bi bi-headset"></i></a>
+                    <a href="./html/contact.html" class="cta-btn">Nous Contacter <i class="bi bi-headset"></i></a>
                 </div>
                 <div class="cta-image">
                     <img src="../assets/contact.jpg" alt="Contact">
@@ -340,7 +340,7 @@
         </div>
 
         <div class="view-more-container">
-            <a href="./about-us.html" class="view-more-btn" aria-label="En savoir plus sur nous">
+            <a href="./html/about-us.html" class="view-more-btn" aria-label="En savoir plus sur nous">
                 En savoir plus <i class="bi bi-arrow-right"></i>
             </a>
         </div>
@@ -369,7 +369,7 @@
             <div class="footer-section links">
                 <h3>Liens Rapides</h3>
                 <ul>
-                    <li><a href="./index.html">Accueil</a></li>
+                    <li><a href="./html/index.html">Accueil</a></li>
                     <li><a href="#">Destinations</a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Contact</a></li>
