--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </ul>
 
         <div class="nav-buttons">
-            <a href="./html/login.html" class="btn login">Connexion</a>
-            <a href="./html/signup.html" class="btn signup">Inscription</a>
+            <a href="/html/login.html" class="btn login">Connexion</a>
+            <a href="/html/signup.html" class="btn signup">Inscription</a>
         </div>
 
         <div class="menu-icon">
